--- a/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
@@ -257,6 +257,22 @@ test_cases:
     77A221212000024CA00
     77A230023C24A5D4455
 - expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 70
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 87
+    VOLKSWAGEN_AUX_BAT_C: -15.574
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 990
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 960.6
+    VOLKSWAGEN_AUX_BAT_SOC: 67
+    VOLKSWAGEN_AUX_BAT_T: 36
+    VOLKSWAGEN_AUX_BAT_T_S: 28
+    VOLKSWAGEN_AUX_BAT_V: 12.698
+  response: |-
+    77A101A622AF721FAFF
+    77A21FFC32A26434C44
+    77A221212000026AC00
+    77A2300258646574455
+- expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 72
     VOLKSWAGEN_AUX_BAT_AGE_POW: 88
     VOLKSWAGEN_AUX_BAT_C: -7.749
