--- a/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
@@ -36,6 +36,13 @@ test_cases:
     77D2100078006ED0808
     77D22073101AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 733.3
+    VOLKSWAGEN_FR_VSS_V2: 733.3
+  response: |-
+    77D10106218011CA520
+    77D2100078004DF0597
+    77D22055001AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 972.3
     VOLKSWAGEN_FR_VSS_V2: 972.3
   response: |-
