--- a/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 119
   response: 77E0562224B0077
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 120
+  response: 77E0562224B0078
