--- a/tests/test_cases/2018/commands/7E0.7E8.2211BE.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2211BE.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_EOT_V2: 2
   response: 7E8056211BE0002
 - expected_values:
-    VOLKSWAGEN_EOT_V2: 41
-  response: 7E8056211BE0029
+    VOLKSWAGEN_EOT_V2: 65530
+  response: 7E8056211BEFFFA
+- expected_values:
+    VOLKSWAGEN_EOT_V2: 65535
+  response: 7E8056211BEFFFF
