--- a/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2018/commands/714.77E.22224B|fc=1.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 152
   response: 77E0562224B0098
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 153
+  response: 77E0562224B0099
