--- a/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
@@ -48,3 +48,9 @@ test_cases:
   response: |-
     77A100B622A61000158
     77A21F300014370AAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000159
+    77A210000014375AAAA
