--- a/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.84
   response: '7E8056211394000'
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 171.57
-  response: '7E8056211394305'
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 174.39
+  response: 7E805621139441F
